static/scss/main.scss
@import "variables";
@import 'pages/notes';

*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

address,
blockquote,
dl,
figure,
form,
ol,
p,
pre,
table,
ul {
  margin-top: 0;
  margin-bottom: var(--typography-spacing-vertical);
  color: var(--color);
  font-style: normal;
  font-weight: var(--font-weight);
  font-size: var(--font-size);
}

hgroup,
.headings {
  margin-bottom: var(--typography-spacing-vertical);

  > * {
    margin-bottom: 0;
  }

  // > *:last-child {
  //   --font-weight: unset;
  //   font-size: 1rem;
  //   font-family: unset;
  //   color: $tertiary-color;
  // }
}

body {
  font-family: var(--font-family);
  letter-spacing: 0.5px;
  line-height: 30px;
}

a {
  text-decoration: none;
  color: $tertiary-color;
}


nav {
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 0;
  max-width: 105rem;
  padding: 1rem;

  display: flex;
  justify-content: end;
  align-items: center;

  ul {
    display: flex;
    gap: .5rem;
    font-weight: var(--font-size);
    font-size: var(--font-size);
    color: $tertiary-color;
    line-height: 1.25rem;
    margin-bottom: 0;

    &:first-of-type {
      margin-left: calc($nav-element-spacing-horizontal * -1);
    }
    &:last-of-type {
      margin-right: calc($nav-element-spacing-horizontal * -1);
    }

    li {
      list-style: none;
      padding: $nav-element-spacing-vertical $nav-element-spacing-horizontal;

      a.nav-link {
        border-radius: .5rem;
        padding: .75rem .5rem;
      }
    }
  }
}

.container {
  padding: 0 7vw;
}

.flex {
  display: flex;
}

.justify-content-between {
  justify-content: space-between;
}

.align-items-baseline {
  align-items: baseline;
}

.landing {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.headline {
  width: 100%;
  position: relative;
  text-align: center;

  hgroup {
    margin-bottom: $typography-spacing-vertical;

    h1 {
      font-size: var(--font-size);
      line-height: var(--line-height);
      font-weight: var(--font-weight);
    }

    h2 {
      font-size: var(--font-size);
      line-height: var(--line-height);
      font-weight: unset;
    }
  }
}

nav.social-links {
  display: flex;
  justify-content: center;

  ul {
    align-items: center;
    list-style: none;

    display: flex;

    &:first-of-type {
      margin-left: calc($nav-element-spacing-horizontal * -1);
    }

    &:last-of-type {
      margin-right: calc($nav-element-spacing-horizontal * -1);
    }

    > li {
      display: inline-block;
      padding: $nav-element-spacing-vertical $nav-element-spacing-horizontal;

      a {
        position: relative;
        text-decoration: none;
        color: $tertiary-color;
        transition: color 0.5s ease-in-out;
        font-size: 1rem;

        &::before {
          content: '';
          position: absolute;
          left: 0;
          bottom: -1%;
          background-color: $tertiary-color;
          width: 100%;
          height: 2px;
          transform: scaleX(0);
          transform-origin: left;
          transition: transform 650ms;
        }

        &:hover::before {
          transform: scaleX(1);
          background-color: $seconday-color;
        }

        &:hover {
          color: $seconday-color;
        }
      }
    }
  }
}

.scroll-down {
  position: absolute;
  bottom: 10%;
  text-decoration: none;
  font-size: var(--font-size);
  color: $tertiary-color;
  cursor: pointer;
  transition: all 0.5s ease-in-out;

  &:hover {
    color: $seconday-color;
  }
}

.dot {
  background-color: $primary-color;
  border-radius: 100px;
  width: 25px;
  height: 25px;
}

// project.html
header.section-header {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  height: 30vh;
}

.sr-only {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0,0,0,0);
	white-space: nowrap;
	border-width: 0;
}

main {
  margin-bottom: 8em;

  fieldset {
    display: flex;
    flex-wrap: wrap;
    gap: .75rem;
    border: 0;
    padding: 1rem 0;
    margin: 0;

    div {
      --text-opacity: 1;
      --bg-opacity: 1;
      --border-opacity: 1;

      .peer:checked ~ label {
        color: rgb(255 255 255/var(--text-opacity));
        background-color: rgba($primary-color, var(--bg-opacity));
      }

      input[type="radio"] {
        display: none;
      }

      label {
        padding: .5rem .75rem;
        color: rgb(17 24 39/var(--text-opacity));
        background-color: rgb(255 255 255/var(--bg-opacity));
        border-width: 1px;
        border-color: rgb(243 244 246/var(--border-opacity));
        border-radius: .375rem;
        cursor: pointer;

        display: flex;
        justify-content: center;
        align-items: center;

        &:hover {
          background-color: rgba($primary-color, 0.2);
        }

        p {
          margin: 0;
          font-weight: 500;
          font-size: var(--font-size);
          line-height: 1.25rem;
        }
      }
    }
  }

  .grid {
    display: grid;
    grid-template-columns: repeat(3, minmax(15rem, 1fr));
    grid-gap: 3rem;
    justify-content: space-around;
  }

  .project-card {
    header {
      > a {
        border-bottom: 0;
      }

      > a > img {
        max-width: 100%;

        .slide-in {
          opacity: 0;
          transition: all 0.5s;
        }

        .align-left.slide-in {
          transform: translateX(-30%) scale(0.95);
        }

        .slide-in.active {
          opacity: 1;
          transform: translateX(0%) scale(1);
        }
      }
    }

    h3 {
      font-size: 22px;

      > small {
        color: $tertiary-color;
        font-size: .65em;
      }
    }


    p {
      line-height: var(--line-height);
    }

    a {
      border-bottom: 1px dotted;
      font-size: 1rem;
      font-family: unset;
      color: $tertiary-color;

      &:hover {
        --hover-color: rgba($seconday-color, 0.5);

        border-bottom-width: 1px;
        border-bottom-color: var(--hover-color);
        color: var(--hover-color);
      }
    }
  }
}

footer {
  background-color: $primary-color;
  height: 40vh;
  color: $white-color;

  a {
    font-size: 1rem;
    text-decoration: none;
    color: $white-color;
    position: relative;
    top: 50%;
    left: 7%;

    &::before {
      content: '';
      position: absolute;
      left: 0;
      bottom: -0.5rem;
      background: linear-gradient(to left, $tertiary-color, $tertiary-color);
      width: 100%;
      height: 2px;
      transition: all 650ms;
    }

    &:hover::before {
      background: linear-gradient(to left, $white-color, $white-color);
    }
  }
}

@media screen and (max-width: 576px) {
  .headline {
    hgroup {
      h1 {
        font-size: 1.6rem;
      }

      h2 {
        font-size: 20px;
      }
    }
  }

  header.section-header > h1 {
    font-size: 1.8rem;
  }
}

@media screen and (min-width: 770px) {
  .project-card > header > a > img {
    filter: grayscale(100%);
    transition: all 0.5s ease-in-out;

    &:hover {
      filter: grayscale(0%);
    }
  }
}

// with max-width: 848 below trigger this screen
@media screen and (max-width: 848px) {
  main {
    .grid {
      grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
    }
  }
}

